removes mbti names from text

--- a/mbtiPrediction.ipynb
+++ b/mbtiPrediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mbti_df = pd.read_csv(r'C:\\Users\\seren\\vsCodeProjects\\mbtiPredictor\\MBTI 500.csv')"
+    "mbti_df = pd.read_csv(r'/Users/shreyasubramanya/mbtiPredictor/MBTI500.csv')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed MBTI types from /Users/shreyasubramanya/mbtiPredictor/MBTI500.csv and saved the result in output.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "# List of MBTI types\n",
+    "mbti_types = [\"istj\", \"isfj\", \"infj\", \"intj\", \"istp\", \"isfp\", \"infp\", \"intp\",\n",
+    "             \"estj\", \"esfj\", \"enfj\", \"entj\", \"estp\", \"esfp\", \"enfp\", \"entp\"]\n",
+    "\n",
+    "\n",
+    "# Input CSV file path\n",
+    "input_file = '/Users/shreyasubramanya/mbtiPredictor/MBTI500.csv'\n",
+    "\n",
+    "# Output CSV file path\n",
+    "output_file = 'output.csv'\n",
+    "\n",
+    "# Function to remove MBTI types from a text\n",
+    "def remove_mbti_types(text):\n",
+    "    for mbti_type in mbti_types:\n",
+    "        text = text.replace(mbti_type, \"\")\n",
+    "    return \" \".join(text.split())  # Remove extra spaces\n",
+    "\n",
+    "# Read the input CSV file and process it\n",
+    "with open(input_file, 'r', newline='') as csvfile_in, open(output_file, 'w', newline='') as csvfile_out:\n",
+    "    reader = csv.reader(csvfile_in)\n",
+    "    writer = csv.writer(csvfile_out)\n",
+    "\n",
+    "    for row in reader:\n",
+    "        if len(row) > 0:  # Ensure the row is not empty\n",
+    "            first_part = row[0]\n",
+    "            first_part_without_mbti = remove_mbti_types(first_part)\n",
+    "            row[0] = first_part_without_mbti\n",
+    "            writer.writerow(row)\n",
+    "\n",
+    "print(f'Removed MBTI types from {input_file} and saved the result in {output_file}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -123,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
