Figures and Machine Learning Applied

--- a/3730TorchClassifier.ipynb
+++ b/3730TorchClassifier.ipynb
@@ -849,7 +849,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -870,25 +870,206 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch   1:   500/ 2700 batches: accuracy    0.205\n",
-            "Epoch   1:  1000/ 2700 batches: accuracy    0.214\n",
-            "Epoch   1:  1500/ 2700 batches: accuracy    0.219\n",
-            "Epoch   1:  2000/ 2700 batches: accuracy    0.219\n",
-            "Epoch   1:  2500/ 2700 batches: accuracy    0.223\n",
+            "Epoch   1:   500/ 2700 batches: accuracy    0.246\n",
+            "Epoch   1:  1000/ 2700 batches: accuracy    0.247\n",
+            "Epoch   1:  1500/ 2700 batches: accuracy    0.243\n",
+            "Epoch   1:  2000/ 2700 batches: accuracy    0.244\n",
+            "Epoch   1:  2500/ 2700 batches: accuracy    0.243\n",
             "-----------------------------------------------------------\n",
-            "End of Epoch   1: Time: 74.49, Valid Accuracy:    0.225\n",
+            "End of Epoch   1: Time: 72.93, Valid Accuracy:    0.244\n",
+            "-----------------------------------------------------------\n",
+            "Epoch   2:   500/ 2700 batches: accuracy    0.249\n",
+            "Epoch   2:  1000/ 2700 batches: accuracy    0.253\n",
+            "Epoch   2:  1500/ 2700 batches: accuracy    0.251\n",
+            "Epoch   2:  2000/ 2700 batches: accuracy    0.255\n",
+            "Epoch   2:  2500/ 2700 batches: accuracy    0.248\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch   2: Time: 73.15, Valid Accuracy:    0.244\n",
+            "-----------------------------------------------------------\n",
+            "Epoch   3:   500/ 2700 batches: accuracy    0.258\n",
+            "Epoch   3:  1000/ 2700 batches: accuracy    0.259\n",
+            "Epoch   3:  1500/ 2700 batches: accuracy    0.257\n",
+            "Epoch   3:  2000/ 2700 batches: accuracy    0.259\n",
+            "Epoch   3:  2500/ 2700 batches: accuracy    0.256\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch   3: Time: 73.88, Valid Accuracy:    0.245\n",
+            "-----------------------------------------------------------\n",
+            "Epoch   4:   500/ 2700 batches: accuracy    0.264\n",
+            "Epoch   4:  1000/ 2700 batches: accuracy    0.263\n",
+            "Epoch   4:  1500/ 2700 batches: accuracy    0.263\n",
+            "Epoch   4:  2000/ 2700 batches: accuracy    0.262\n",
+            "Epoch   4:  2500/ 2700 batches: accuracy    0.263\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch   4: Time: 73.89, Valid Accuracy:    0.252\n",
+            "-----------------------------------------------------------\n",
+            "Epoch   5:   500/ 2700 batches: accuracy    0.268\n",
+            "Epoch   5:  1000/ 2700 batches: accuracy    0.269\n",
+            "Epoch   5:  1500/ 2700 batches: accuracy    0.267\n",
+            "Epoch   5:  2000/ 2700 batches: accuracy    0.266\n",
+            "Epoch   5:  2500/ 2700 batches: accuracy    0.268\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch   5: Time: 73.60, Valid Accuracy:    0.237\n",
+            "-----------------------------------------------------------\n",
+            "Epoch   6:   500/ 2700 batches: accuracy    0.277\n",
+            "Epoch   6:  1000/ 2700 batches: accuracy    0.281\n",
+            "Epoch   6:  1500/ 2700 batches: accuracy    0.281\n",
+            "Epoch   6:  2000/ 2700 batches: accuracy    0.278\n",
+            "Epoch   6:  2500/ 2700 batches: accuracy    0.282\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch   6: Time: 73.66, Valid Accuracy:    0.257\n",
+            "-----------------------------------------------------------\n",
+            "Epoch   7:   500/ 2700 batches: accuracy    0.281\n",
+            "Epoch   7:  1000/ 2700 batches: accuracy    0.284\n",
+            "Epoch   7:  1500/ 2700 batches: accuracy    0.282\n",
+            "Epoch   7:  2000/ 2700 batches: accuracy    0.282\n",
+            "Epoch   7:  2500/ 2700 batches: accuracy    0.281\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch   7: Time: 73.85, Valid Accuracy:    0.257\n",
+            "-----------------------------------------------------------\n",
+            "Epoch   8:   500/ 2700 batches: accuracy    0.282\n",
+            "Epoch   8:  1000/ 2700 batches: accuracy    0.282\n",
+            "Epoch   8:  1500/ 2700 batches: accuracy    0.283\n",
+            "Epoch   8:  2000/ 2700 batches: accuracy    0.283\n",
+            "Epoch   8:  2500/ 2700 batches: accuracy    0.282\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch   8: Time: 74.06, Valid Accuracy:    0.257\n",
+            "-----------------------------------------------------------\n",
+            "Epoch   9:   500/ 2700 batches: accuracy    0.282\n",
+            "Epoch   9:  1000/ 2700 batches: accuracy    0.282\n",
+            "Epoch   9:  1500/ 2700 batches: accuracy    0.283\n",
+            "Epoch   9:  2000/ 2700 batches: accuracy    0.282\n",
+            "Epoch   9:  2500/ 2700 batches: accuracy    0.282\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch   9: Time: 73.79, Valid Accuracy:    0.257\n",
+            "-----------------------------------------------------------\n",
+            "Epoch  10:   500/ 2700 batches: accuracy    0.283\n",
+            "Epoch  10:  1000/ 2700 batches: accuracy    0.283\n",
+            "Epoch  10:  1500/ 2700 batches: accuracy    0.283\n",
+            "Epoch  10:  2000/ 2700 batches: accuracy    0.280\n",
+            "Epoch  10:  2500/ 2700 batches: accuracy    0.282\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch  10: Time: 73.30, Valid Accuracy:    0.257\n",
+            "-----------------------------------------------------------\n",
+            "Epoch  11:   500/ 2700 batches: accuracy    0.279\n",
+            "Epoch  11:  1000/ 2700 batches: accuracy    0.287\n",
+            "Epoch  11:  1500/ 2700 batches: accuracy    0.281\n",
+            "Epoch  11:  2000/ 2700 batches: accuracy    0.284\n",
+            "Epoch  11:  2500/ 2700 batches: accuracy    0.282\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch  11: Time: 74.66, Valid Accuracy:    0.257\n",
+            "-----------------------------------------------------------\n",
+            "Epoch  12:   500/ 2700 batches: accuracy    0.282\n",
+            "Epoch  12:  1000/ 2700 batches: accuracy    0.282\n",
+            "Epoch  12:  1500/ 2700 batches: accuracy    0.281\n",
+            "Epoch  12:  2000/ 2700 batches: accuracy    0.284\n",
+            "Epoch  12:  2500/ 2700 batches: accuracy    0.285\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch  12: Time: 74.72, Valid Accuracy:    0.257\n",
+            "-----------------------------------------------------------\n",
+            "Epoch  13:   500/ 2700 batches: accuracy    0.281\n",
+            "Epoch  13:  1000/ 2700 batches: accuracy    0.286\n",
+            "Epoch  13:  1500/ 2700 batches: accuracy    0.283\n",
+            "Epoch  13:  2000/ 2700 batches: accuracy    0.284\n",
+            "Epoch  13:  2500/ 2700 batches: accuracy    0.280\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch  13: Time: 73.42, Valid Accuracy:    0.257\n",
+            "-----------------------------------------------------------\n",
+            "Epoch  14:   500/ 2700 batches: accuracy    0.282\n",
+            "Epoch  14:  1000/ 2700 batches: accuracy    0.281\n",
+            "Epoch  14:  1500/ 2700 batches: accuracy    0.284\n",
+            "Epoch  14:  2000/ 2700 batches: accuracy    0.285\n",
+            "Epoch  14:  2500/ 2700 batches: accuracy    0.282\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch  14: Time: 73.79, Valid Accuracy:    0.257\n",
+            "-----------------------------------------------------------\n",
+            "Epoch  15:   500/ 2700 batches: accuracy    0.281\n",
+            "Epoch  15:  1000/ 2700 batches: accuracy    0.284\n",
+            "Epoch  15:  1500/ 2700 batches: accuracy    0.282\n",
+            "Epoch  15:  2000/ 2700 batches: accuracy    0.281\n",
+            "Epoch  15:  2500/ 2700 batches: accuracy    0.285\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch  15: Time: 73.25, Valid Accuracy:    0.257\n",
+            "-----------------------------------------------------------\n",
+            "Epoch  16:   500/ 2700 batches: accuracy    0.284\n",
+            "Epoch  16:  1000/ 2700 batches: accuracy    0.281\n",
+            "Epoch  16:  1500/ 2700 batches: accuracy    0.285\n",
+            "Epoch  16:  2000/ 2700 batches: accuracy    0.280\n",
+            "Epoch  16:  2500/ 2700 batches: accuracy    0.283\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch  16: Time: 79.44, Valid Accuracy:    0.257\n",
+            "-----------------------------------------------------------\n",
+            "Epoch  17:   500/ 2700 batches: accuracy    0.280\n",
+            "Epoch  17:  1000/ 2700 batches: accuracy    0.284\n",
+            "Epoch  17:  1500/ 2700 batches: accuracy    0.282\n",
+            "Epoch  17:  2000/ 2700 batches: accuracy    0.281\n",
+            "Epoch  17:  2500/ 2700 batches: accuracy    0.284\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch  17: Time: 80.47, Valid Accuracy:    0.257\n",
+            "-----------------------------------------------------------\n",
+            "Epoch  18:   500/ 2700 batches: accuracy    0.285\n",
+            "Epoch  18:  1000/ 2700 batches: accuracy    0.284\n",
+            "Epoch  18:  1500/ 2700 batches: accuracy    0.281\n",
+            "Epoch  18:  2000/ 2700 batches: accuracy    0.284\n",
+            "Epoch  18:  2500/ 2700 batches: accuracy    0.281\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch  18: Time: 76.95, Valid Accuracy:    0.257\n",
+            "-----------------------------------------------------------\n",
+            "Epoch  19:   500/ 2700 batches: accuracy    0.286\n",
+            "Epoch  19:  1000/ 2700 batches: accuracy    0.282\n",
+            "Epoch  19:  1500/ 2700 batches: accuracy    0.283\n",
+            "Epoch  19:  2000/ 2700 batches: accuracy    0.279\n",
+            "Epoch  19:  2500/ 2700 batches: accuracy    0.284\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch  19: Time: 74.41, Valid Accuracy:    0.257\n",
+            "-----------------------------------------------------------\n",
+            "Epoch  20:   500/ 2700 batches: accuracy    0.282\n",
+            "Epoch  20:  1000/ 2700 batches: accuracy    0.280\n",
+            "Epoch  20:  1500/ 2700 batches: accuracy    0.285\n",
+            "Epoch  20:  2000/ 2700 batches: accuracy    0.281\n",
+            "Epoch  20:  2500/ 2700 batches: accuracy    0.285\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch  20: Time: 74.00, Valid Accuracy:    0.257\n",
+            "-----------------------------------------------------------\n",
+            "Epoch  21:   500/ 2700 batches: accuracy    0.286\n",
+            "Epoch  21:  1000/ 2700 batches: accuracy    0.281\n",
+            "Epoch  21:  1500/ 2700 batches: accuracy    0.281\n",
+            "Epoch  21:  2000/ 2700 batches: accuracy    0.284\n",
+            "Epoch  21:  2500/ 2700 batches: accuracy    0.283\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch  21: Time: 73.79, Valid Accuracy:    0.257\n",
+            "-----------------------------------------------------------\n",
+            "Epoch  22:   500/ 2700 batches: accuracy    0.282\n",
+            "Epoch  22:  1000/ 2700 batches: accuracy    0.283\n",
+            "Epoch  22:  1500/ 2700 batches: accuracy    0.282\n",
+            "Epoch  22:  2000/ 2700 batches: accuracy    0.282\n",
+            "Epoch  22:  2500/ 2700 batches: accuracy    0.285\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch  22: Time: 73.88, Valid Accuracy:    0.257\n",
+            "-----------------------------------------------------------\n",
+            "Epoch  23:   500/ 2700 batches: accuracy    0.283\n",
+            "Epoch  23:  1000/ 2700 batches: accuracy    0.282\n",
+            "Epoch  23:  1500/ 2700 batches: accuracy    0.280\n",
+            "Epoch  23:  2000/ 2700 batches: accuracy    0.288\n",
+            "Epoch  23:  2500/ 2700 batches: accuracy    0.282\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch  23: Time: 73.90, Valid Accuracy:    0.257\n",
+            "-----------------------------------------------------------\n",
+            "Epoch  24:   500/ 2700 batches: accuracy    0.282\n",
+            "Epoch  24:  1000/ 2700 batches: accuracy    0.282\n",
+            "Epoch  24:  1500/ 2700 batches: accuracy    0.282\n",
+            "Epoch  24:  2000/ 2700 batches: accuracy    0.285\n",
+            "Epoch  24:  2500/ 2700 batches: accuracy    0.283\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch  24: Time: 75.44, Valid Accuracy:    0.257\n",
+            "-----------------------------------------------------------\n",
+            "Epoch  25:   500/ 2700 batches: accuracy    0.281\n",
+            "Epoch  25:  1000/ 2700 batches: accuracy    0.285\n",
+            "Epoch  25:  1500/ 2700 batches: accuracy    0.284\n",
+            "Epoch  25:  2000/ 2700 batches: accuracy    0.284\n",
+            "Epoch  25:  2500/ 2700 batches: accuracy    0.279\n",
+            "-----------------------------------------------------------\n",
+            "End of Epoch  25: Time: 74.00, Valid Accuracy:    0.257\n",
             "-----------------------------------------------------------\n"
-          ]
-        },
-        {
-          "ename": "TypeError",
-          "evalue": "save() missing 1 required positional argument: 'f'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32mc:\\Users\\seren\\vsCodeProjects\\mbtiPredictor\\3730TorchClassifier.ipynb Cell 24\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/seren/vsCodeProjects/mbtiPredictor/3730TorchClassifier.ipynb#Y110sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEnd of Epoch \u001b[39m\u001b[39m{:3d}\u001b[39;00m\u001b[39m: Time: \u001b[39m\u001b[39m{:5.2f}\u001b[39;00m\u001b[39m, Valid Accuracy: \u001b[39m\u001b[39m{:8.3f}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(epoch, time\u001b[39m.\u001b[39mtime() \u001b[39m-\u001b[39m epoch_start, accu_val))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/seren/vsCodeProjects/mbtiPredictor/3730TorchClassifier.ipynb#Y110sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m-\u001b[39m\u001b[39m'\u001b[39m\u001b[39m*\u001b[39m\u001b[39m59\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/seren/vsCodeProjects/mbtiPredictor/3730TorchClassifier.ipynb#Y110sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m torch\u001b[39m.\u001b[39;49msave(\u001b[39m\"\u001b[39;49m\u001b[39mSAVETHISTOYOURLOCAL\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-            "\u001b[1;31mTypeError\u001b[0m: save() missing 1 required positional argument: 'f'"
           ]
         }
       ],
@@ -904,7 +1085,7 @@
         "  print('-'*59)\n",
         "  print(\"End of Epoch {:3d}: Time: {:5.2f}, Valid Accuracy: {:8.3f}\".format(epoch, time.time() - epoch_start, accu_val))\n",
         "  print('-'*59)\n",
-        "  torch.save(\"SAVETHISTOYOURLOCAL\")"
+        "  torch.save(model, 'SAVETHISTOYOURLOCAL.txt')"
       ]
     },
     {
